--- a/max-burger/src/Person/Person.css
+++ b/max-burger/src/Person/Person.css
@@ -7,3 +7,9 @@ box-shadow:0 2px 3px #eee;
 padding:16px;
 text-align:center;
 }
+
+@media(min-width:500px){
+    .Person{
+        width:450px;
+    }
+}
