--- a/max-burger/src/Person/Person.css
+++ b/max-burger/src/Person/Person.css
@@ -8,8 +8,11 @@ padding:16px;
 text-align:center;
 }
 
+
+/* traditional media queries */
 @media(min-width:500px){
     .Person{
         width:450px;
     }
 }
+
